Fix img on firefox

--- a/webfiles/css/sass/layouts/sections/_jvAndTcg.scss
+++ b/webfiles/css/sass/layouts/sections/_jvAndTcg.scss
@@ -32,6 +32,10 @@
         display: flex;
         align-items: center;
 
+        >* {
+            flex: 1;
+        }
+
         &:first-of-type {
 
             margin-bottom: 3rem;
@@ -57,6 +61,10 @@
     .jv-contests {
         flex-direction: column;
         gap: 2rem;
+    }
+
+    #jv-and-tcg img {
+        width: 100%;
     }
 
     .tcg-contests {
